Update index.html - include male avatar png

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="flex items-center space-x-4">
                 <input type="search" placeholder="Search..." class="px-4 py-1 rounded text-gray-900">
-                <img src="/api/placeholder/32/32" alt="User Avatar" class="w-8 h-8 rounded-full">
+                <img src="/assets/male-avatar.png" alt="User Avatar" class="w-8 h-8 rounded-full">
             </div>
         </div>
     </nav>
