--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="bg-blue-600 text-white p-4">
         <div class="container mx-auto flex justify-between items-center">
             <div class="flex items-center space-x-4">
-                <h1 class="text-2xl font-bold">Company Portal</h1>
+                <h1 class="text-2xl font-bold">ABC Company Portal</h1>
                 <div class="hidden md:flex space-x-4">
                     <a href="#" class="hover:text-blue-200">Home</a>
                     <a href="#" class="hover:text-blue-200">Departments</a>
@@ -116,14 +116,14 @@
                 <h2 class="text-xl font-bold mb-4">Team Birthdays</h2>
                 <div class="grid grid-cols-2 gap-4">
                     <div class="flex items-center">
-                        <img src="/api/placeholder/40/40" alt="Employee 1" class="w-10 h-10 rounded-full">
+                        <img src="/assets/female-avatar.png" alt="Employee 1" class="w-10 h-10 rounded-full">
                         <div class="ml-3">
                             <div class="font-semibold">Sarah Johnson</div>
                             <div class="text-sm text-gray-600">Feb 18</div>
                         </div>
                     </div>
                     <div class="flex items-center">
-                        <img src="/api/placeholder/40/40" alt="Employee 2" class="w-10 h-10 rounded-full">
+                        <img src="/assets/male-avatar.png" alt="Employee 2" class="w-10 h-10 rounded-full">
                         <div class="ml-3">
                             <div class="font-semibold">Mike Peters</div>
                             <div class="text-sm text-gray-600">Feb 25</div>
@@ -139,7 +139,7 @@
         <div class="container mx-auto py-6 px-4">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="text-center md:text-left mb-4 md:mb-0">
-                    <h2 class="text-lg font-bold">Company Name</h2>
+                    <h2 class="text-lg font-bold">ABC Pte Ltd</h2>
                     <p class="text-sm text-gray-400">© 2025 All rights reserved</p>
                 </div>
                 <div class="flex space-x-4">
